// Copyright Â© 2019 Binance
//
// This file is part of Binance. The full Binance copyright notice, including
// terms governing use, modification, and redistribution, is contained in the
// file LICENSE at the root of the source code distribution tree.

syntax = "proto3";

package binance.tsslib;
option go_package = "github.com/yossigi/tss-lib/v2/common";


// TrackingID is used to track the specific session when multiple sessions are running in parallel.
// All messages tied to specific session should have the same TrackingID.
message TrackingID{
    // the digest of the message that is being signed.
    bytes digest = 1;

    // parties state indicate with true that a party is well, 
    // and with false that a party is not well for this specific digest.
    // the size of parties_state should allow enough bits to count all participating parties in the protocol.
    bytes parties_state = 2;

    // any auxilary data provided to the protocol from outside, and needs to be on every message.
    bytes auxilary_data = 3;
  }
  
/*
 * Container for output signatures, mostly used for marshalling this data structure to a mobile app
 */
message SignatureData {
    bytes signature = 1;

    // Ethereum-style recovery byte; only the first byte is relevant
    bytes signature_recovery = 2;

    // Signature components R, S
    bytes r = 3;
    bytes s = 4;

    // M represents the original message digest that was signed M
    bytes m = 5;

    // This value is set once a new local party is created.
    // used to track the specific session when multiple sessions are running in parallel.
    TrackingID tracking_id = 6;
}
